k8s/dashboard-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-api
  template:
    metadata:
      labels:
        app: dashboard-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: dashboard-api
          image: dashboard-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
