k8s/telemetry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry
  template:
    metadata:
      labels:
        app: telemetry
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: telemetry
          image: telemetry-go:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9091
              name: metrics
