k8s/css-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: css-service
spec:
  selector:
    app: css
  ports:
    - port: 50051
      targetPort: 50051
  type: ClusterIP
